Signatures: Don't do too small background images

Unfortunately poppler fails to embed and crashes.

BUG: 499746


(cherry picked from commit e554ef9d054a2682ec7ac550987c9eef93d0937e)

Co-authored-by: Sune Vuorela <sune@vuorela.dk>